[gd_scene load_steps=30 format=3 uid="uid://cd86vkgynmcjm"]

[ext_resource type="Script" path="res://assets/scripts/simulation/simulation_interface.gd" id="1_5eupj"]
[ext_resource type="Script" path="res://assets/scripts/simulation/simulation_engine.gd" id="1_ilwan"]
[ext_resource type="FontFile" uid="uid://drcp5q6p2eycg" path="res://assets/font/lexend/Lexend-Light.ttf" id="2_uuw30"]
[ext_resource type="FontFile" uid="uid://b641eb41yeh4g" path="res://assets/font/lexend/Lexend-ExtraLight.ttf" id="2_w6nuo"]
[ext_resource type="BoxMesh" uid="uid://bwda3io5v3y3m" path="res://assets/materials/simulation/simulation_map_platform_mesh.tres" id="3_yn1j6"]
[ext_resource type="PackedScene" uid="uid://btwcn5425ye0f" path="res://assets/objects/camera/camera.tscn" id="4_y7ocw"]
[ext_resource type="Texture2D" uid="uid://c478lrif2qpnk" path="res://assets/objects/building/brackets/5x/bracket5x.png" id="5_5xcqx"]
[ext_resource type="Texture2D" uid="uid://8c03tynky005" path="res://assets/objects/building/wheel/wheel_reg/wheel.png" id="5_60ld5"]
[ext_resource type="Texture2D" uid="uid://bgmjn31fr5g35" path="res://assets/objects/building/brackets/1x/bracket1x.png" id="5_cocdd"]
[ext_resource type="Texture2D" uid="uid://cn8nylf8bq2ox" path="res://assets/objects/building/motor/motor_reg/motor.png" id="5_fm01e"]
[ext_resource type="Texture2D" uid="uid://3iwxvrnjkdbp" path="res://assets/objects/building/brackets/3x/bracket3x.png" id="5_j1iph"]
[ext_resource type="PackedScene" uid="uid://cu8da702e8ti8" path="res://assets/objects/misc/the_cube/the_cube.tscn" id="5_jvy4d"]
[ext_resource type="Texture2D" uid="uid://divuhxd0mb711" path="res://assets/objects/building/brackets/4x/bracket4x.png" id="5_ytpaf"]
[ext_resource type="PackedScene" uid="uid://573dhpbs8qay" path="res://assets/objects/misc/vblox_logo/vblox_logo.tscn" id="6_ind2l"]
[ext_resource type="Texture2D" uid="uid://rqpgc4af6usc" path="res://assets/objects/building/brackets/2x/bracket2x.png" id="6_ng8rb"]
[ext_resource type="Texture2D" uid="uid://ilx2o6n32nk5" path="res://assets/textures/coding_area_textures/editor/span_blocks.png" id="24_abp0i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_784js"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ia8p3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t0ap7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4a42o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a4wq3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2omud"]
bg_color = Color(0.0509804, 0.0509804, 0.0509804, 0.392157)
corner_radius_top_left = 30
corner_radius_top_right = 30

[sub_resource type="AtlasTexture" id="AtlasTexture_bfib7"]
atlas = ExtResource("24_abp0i")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnxcw"]
atlas = ExtResource("24_abp0i")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hdds"]
atlas = ExtResource("24_abp0i")
region = Rect2(0, 64, 32, 32)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_epgrl"]
sky_top_color = Color(0.211765, 0.313726, 0.552941, 1)
sky_horizon_color = Color(0.545098, 0.686275, 0.811765, 1)
sky_curve = 0.13
ground_bottom_color = Color(0.545098, 0.686275, 0.811765, 1)
ground_horizon_color = Color(0.545098, 0.686275, 0.811765, 1)
sun_curve = 0.13

[sub_resource type="Sky" id="Sky_872ar"]
sky_material = SubResource("ProceduralSkyMaterial_epgrl")
radiance_size = 0

[sub_resource type="Environment" id="Environment_nbaml"]
background_mode = 2
sky = SubResource("Sky_872ar")
ambient_light_source = 2
ambient_light_color = Color(0.780392, 0.780392, 0.780392, 1)
tonemap_mode = 2
tonemap_white = 10.0
sdfgi_use_occlusion = true
fog_aerial_perspective = 0.75
adjustment_enabled = true

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_njmuf"]
data = PackedVector3Array(-375, 0.5, 375, 375, 0.5, 375, -375, -0.5, 375, 375, 0.5, 375, 375, -0.5, 375, -375, -0.5, 375, 375, 0.5, -375, -375, 0.5, -375, 375, -0.5, -375, -375, 0.5, -375, -375, -0.5, -375, 375, -0.5, -375, 375, 0.5, 375, 375, 0.5, -375, 375, -0.5, 375, 375, 0.5, -375, 375, -0.5, -375, 375, -0.5, 375, -375, 0.5, -375, -375, 0.5, 375, -375, -0.5, -375, -375, 0.5, 375, -375, -0.5, 375, -375, -0.5, -375, 375, 0.5, 375, -375, 0.5, 375, 375, 0.5, -375, -375, 0.5, 375, -375, 0.5, -375, 375, 0.5, -375, -375, -0.5, 375, 375, -0.5, 375, -375, -0.5, -375, 375, -0.5, 375, 375, -0.5, -375, -375, -0.5, -375)

[node name="simulation_map" type="Node3D"]
script = ExtResource("1_ilwan")

[node name="user_interface" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_5eupj")

[node name="debug_text" type="Label" parent="user_interface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_w6nuo")
theme_override_font_sizes/font_size = 25
text = "Debug Text"

[node name="background" type="ColorRect" parent="user_interface"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0705882, 0.0705882, 0.0705882, 0)

[node name="pause_menu" type="Control" parent="user_interface"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="menu_button" type="Button" parent="user_interface/pause_menu"]
z_index = 2
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -304.0
offset_top = -184.0
offset_right = -62.0
offset_bottom = -146.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.12549, 0.705882, 0.796078, 1)
theme_override_colors/font_pressed_color = Color(0.0784314, 0.517647, 0.588235, 1)
theme_override_colors/font_hover_color = Color(0.192157, 0.807843, 0.909804, 1)
theme_override_colors/font_focus_color = Color(0.12549, 0.705882, 0.796078, 1)
theme_override_colors/font_disabled_color = Color(0.0784314, 0.517647, 0.588235, 1)
theme_override_fonts/font = ExtResource("2_uuw30")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_784js")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ia8p3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t0ap7")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4a42o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_a4wq3")
text = "Back To Menu"
flat = true
alignment = 2

[node name="disclaimer" type="Label" parent="user_interface/pause_menu"]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 64.0
offset_right = -64.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_w6nuo")
theme_override_font_sizes/font_size = 40
text = "You are accessing an ALPHA Feature! You will experience unexpected behaviors, guaranteed!

Hey there! This section of Vblox is under HEAVY CONSTRUCTION. It is still not yet playable at the moment. It will be properly implemented in the near future. Stay tuned!

All interactions inside are limited intendedly as all of them are unstable and might break!

Try to break it as much as possible and send suggestions!

You can check the Code Editor to get the experience though.

Press Escape to continue.

Thanks!"
vertical_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="interactables_menu" type="Control" parent="user_interface"]
process_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="interactables_panel" type="Panel" parent="user_interface/interactables_menu"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.815
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.200073
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2omud")

[node name="interactables_container" type="ScrollContainer" parent="user_interface/interactables_menu/interactables_panel"]
layout_direction = 3
layout_mode = 1
anchors_preset = -1
anchor_top = 0.16
anchor_right = 1.0
anchor_bottom = 0.96
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="interactables_separator" type="HBoxContainer" parent="user_interface/interactables_menu/interactables_panel/interactables_container"]
modulate = Color(1, 1, 1, 0.219608)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 45
alignment = 1

[node name="wheel_reg" type="TextureButton" parent="user_interface/interactables_menu/interactables_panel/interactables_container/interactables_separator"]
custom_minimum_size = Vector2(112, 96)
layout_mode = 2
mouse_default_cursor_shape = 8
disabled = true
texture_normal = ExtResource("5_60ld5")
ignore_texture_size = true
stretch_mode = 5

[node name="motor_reg" type="TextureButton" parent="user_interface/interactables_menu/interactables_panel/interactables_container/interactables_separator"]
custom_minimum_size = Vector2(112, 96)
layout_mode = 2
mouse_default_cursor_shape = 8
disabled = true
texture_normal = ExtResource("5_fm01e")
ignore_texture_size = true
stretch_mode = 5

[node name="bracket_5" type="TextureButton" parent="user_interface/interactables_menu/interactables_panel/interactables_container/interactables_separator"]
custom_minimum_size = Vector2(112, 96)
layout_mode = 2
mouse_default_cursor_shape = 8
disabled = true
texture_normal = ExtResource("5_5xcqx")
ignore_texture_size = true
stretch_mode = 5

[node name="bracket_4" type="TextureButton" parent="user_interface/interactables_menu/interactables_panel/interactables_container/interactables_separator"]
custom_minimum_size = Vector2(112, 96)
layout_mode = 2
mouse_default_cursor_shape = 8
disabled = true
texture_normal = ExtResource("5_ytpaf")
ignore_texture_size = true
stretch_mode = 5

[node name="bracket_3" type="TextureButton" parent="user_interface/interactables_menu/interactables_panel/interactables_container/interactables_separator"]
custom_minimum_size = Vector2(112, 96)
layout_mode = 2
mouse_default_cursor_shape = 8
disabled = true
texture_normal = ExtResource("5_j1iph")
ignore_texture_size = true
stretch_mode = 5

[node name="bracket_2" type="TextureButton" parent="user_interface/interactables_menu/interactables_panel/interactables_container/interactables_separator"]
custom_minimum_size = Vector2(112, 96)
layout_mode = 2
mouse_default_cursor_shape = 8
disabled = true
texture_normal = ExtResource("6_ng8rb")
ignore_texture_size = true
stretch_mode = 5

[node name="bracket_1" type="TextureButton" parent="user_interface/interactables_menu/interactables_panel/interactables_container/interactables_separator"]
custom_minimum_size = Vector2(64, 96)
layout_mode = 2
mouse_default_cursor_shape = 8
disabled = true
texture_normal = ExtResource("5_cocdd")
ignore_texture_size = true
stretch_mode = 5

[node name="span_interactables_panel" type="TextureButton" parent="user_interface/interactables_menu/interactables_panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.492
anchor_right = 0.508
anchor_bottom = 0.16
offset_left = -0.640015
offset_top = 32.0
offset_right = 0.639954
offset_bottom = 32.0
grow_horizontal = 2
rotation = -1.5708
mouse_default_cursor_shape = 9
toggle_mode = true
button_pressed = true
texture_normal = SubResource("AtlasTexture_bfib7")
texture_pressed = SubResource("AtlasTexture_rnxcw")
texture_hover = SubResource("AtlasTexture_8hdds")
stretch_mode = 5

[node name="environment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_nbaml")

[node name="light" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.853448, 0.213772, -0.475319, -0.0316764, 0.931599, 0.362106, 0.520215, -0.293982, 0.801842, 0, 3.70621, 0)
light_energy = 2.0
shadow_enabled = true
shadow_bias = 0.015
shadow_opacity = 0.75
shadow_blur = 2.0

[node name="platform" type="StaticBody3D" parent="."]
collision_mask = 0

[node name="texture" type="MeshInstance3D" parent="platform"]
mesh = ExtResource("3_yn1j6")

[node name="shape" type="CollisionShape3D" parent="platform"]
shape = SubResource("ConcavePolygonShape3D_njmuf")

[node name="camera" parent="." instance=ExtResource("4_y7ocw")]
transform = Transform3D(0.747218, -0.259671, 0.611748, 0, 0.920505, 0.390731, -0.664578, -0.291961, 0.687818, 2.7663, 3.38341, 2.89031)
cam_movement_enabled = true

[node name="objects" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="vblox_logo" parent="objects" instance=ExtResource("6_ind2l")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0465091, 2.00359, 0)

[node name="the_cube" parent="objects" instance=ExtResource("5_jvy4d")]
transform = Transform3D(0.933167, -0.359443, -8.45584e-09, 0.342031, 0.887961, 0.307473, -0.110519, -0.286923, 0.951557, 0.178971, 0.676757, 0)

[connection signal="pressed" from="user_interface/pause_menu/menu_button" to="user_interface" method="_on_menu_button_pressed"]
